nova_tests/negative_capability/forbid_effect_call.nv
// EXPECT_COMPILE_ERROR forbidden by enclosing `forbid Counter`
//
// Plan 16 Ф.2 (D63): вызов fn'а с эффектом, который входит в
// окружающий forbid-set, должен давать compile error.

module negative_capability.forbid_effect_call

type Counter effect {
    next() -> int
}

fn use_counter() Counter -> int => Counter.next()

test "forbid Counter блокирует use_counter" {
    ro _ = forbid Counter {
        use_counter()
    }
    assert(true)
}
